--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
             <div class="row">
                 <div class="col-lg-10 col-lg-offset-1 text-center">
                     
-                 <p class="text-muted">Copyright &copy; Your Website 2014</p>
+                 <p class="text-muted"> &copy;gians2014</p>
                 </div>
             </div>
         </div>
