--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                   
-                    <p class="lead">codesneek<a target="_blank" href="http://codesneek.bitballoon.com/">Blog out</a>.</p>
+                    <p class="lead">I am a creative front-end developer with an artistry touch <br>codesneek<a target="_blank" href="http://codesneek.bitballoon.com/">Blog out</a>.</p>
                 </div>
             </div>
             <!-- /.row -->
@@ -87,7 +87,7 @@
         <div class="container">
             <div class="row text-center">
                 <div class="col-lg-10 col-lg-offset-1">
-                    <h2>Front-End Development</h2>
+                    <h2>Skills- what i use </h2>
                     <hr class="small">
                     <div class="row">
                         <div class="col-md-3 col-sm-6">
