--- a/index.html
+++ b/index.html
@@ -162,14 +162,14 @@
                         <div class="col-md-6">
                             <div class="portfolio-item">
                                 <a href="#">
-                                    <img class="img-portfolio img-responsive" src="img/portfolio-1.jpg">
+                                    <img class="img-portfolio img-responsive" src="img/blog.png">
                                 </a>
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="portfolio-item">
                                 <a href="#">
-                                    <img class="img-portfolio img-responsive" src="img/portfolio-2.jpg">
+                                    <img class="img-portfolio img-responsive" src="img/land.png">
                                 </a>
                             </div>
                         </div>
@@ -179,14 +179,14 @@
                                     <img class="img-portfolio img-responsive" src="img/portfolio-3.jpg">
                                 </a>
                             </div>
-                        </div>-->
+                        </div>
                         <div class="col-md-6">
                             <div class="portfolio-item">
                                 <a href="#">
-                                    <img class="img-portfolio img-responsive" src="img/portfolio-4.jpg">
+                                    <img class="img-portfolio img-responsive" src="img/land.png">
                                 </a>
                             </div>
-                        </div>
+                        </div>-->
                     </div>
                     <!-- /.row (nested) -->
                     <!--<a href="#" class="btn btn-dark">View More Items</a>-->
